kustomize/sd3/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd3-frontend
  labels:
    app: sd3-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd3-frontend
  template:
    metadata:
      labels:
        app: sd3-frontend
    spec:
      serviceAccount: sd3
      containers:
      - name: sd3-frontend
        image: sd3-frontend
        command:
          ["/bin/sh", "-c"]
        args:
          ['source /secrets/sd3-front-env && nginx -g "daemon off;"']
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: "/secrets"
          name: "secrets"
      volumes:
      - name: vault-agent-config
        configMap:
          defaultMode: 420
          name: sd3-front-vault-config
      - name: secrets
        emptyDir: {}
      - name: "k8-tokens"
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              expirationSeconds: 7200
              path: "vault-token"
