kustomize/sd3/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd3-frontend
  labels:
    app: sd3-frontend
spec:
  selector:
    app: sd3-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
