kustomize/sd3/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd3-frontend-ingress
  labels:
    app: sd3-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: status.otc-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sd3-frontend
            port:
              number: 80
